style.css
@font-face {
    font-family: Roboto_thin;
    src: url(fonts/Roboto-Light.ttf);
}

header{
    background-color: #1f2937;
    color: white;
    display: flex;
    justify-content: space-between;
}
#logo{
    height: 40px;
    width: 60px;
    padding: 10px 0 10px 20px;
}
#header_link_group{
    display: flex;
    justify-content: space-between;
    cursor: pointer;
    padding: 20px 20px 0 10px;
}
.header_links{
    padding: 0 10px 0 0;
}
.header_links:hover{
    color:wheat;
}
.header_links:active{
    color: lightblue;
}
body{
    font-family: Roboto_thin;
    margin: 0;
}
#hero{
    display: flex;
    justify-content: space-between;
    background-color: #1f2937;
    color: white;
    margin: 0;
    padding: 40px;
}
#hero_subtext{
    font-size: small;
    padding-left: 20px;
}
#hero_button_div{
    padding: 10px 0px 0 25px;
}
#hero_button{
    color: white;
    background-color: #3882f6;
    border-radius: 5px;
    border: 0;
    padding: 7px;
    cursor: pointer;
}
#hero_button:hover{
    color: black;
}
#hero_button:active{
    color: lightblue;
}
#information_header{
    display: flex;
    justify-content: center;
}
#information{
    display: flex;
    justify-content: center;
    gap: 50px;
    padding: 10px 0 10px 0;
}
.information_images{
    height: 100px;
    width: 100px;
    border-radius: 5px;
}
figure {
    display: flex;
    flex-direction: column; /* Stack image and caption vertically */
    align-items: center; /* Center them horizontally */
    justify-content: center; /* Center them vertically (if needed) */
    text-align: center; /* Ensure caption text is centered */
    margin: 0; /* Optional: reset margin */
}

figcaption{
    font-size: small;
}
#qoute_div{
    display: block;
    text-align: center;
    background-color: #E5E7EB;
    margin: 0px;
    padding: 5px 0 10px 0;
}

#cta_container{
    display: flex;
    justify-content: space-around;
    align-items: center;
    background-color: #3882f6;
    border-radius: 5px;
    max-height: 80px;
    max-width: 450px;
    min-height: 80px;
    min-width: 450px;
}
#cta_dad{
    display: flex;
    justify-content: center;
    padding: 5px 0 5px 0;
    
}
#cta_headers{
    color: white;
    padding: 0
}
#cta_subtext{
    font-size: smaller;
}
#cta_button{
    padding: 7px;
    color: white;
    border-radius: 5px;
    background-color: transparent;
    border: 2px solid white;
    cursor: pointer;
}
#cta_button:hover{
    color: black;
}
#cta_button:active{
    color:lightblue;
}

#end_footer{
    background-color: #1f2937;
    color: wheat;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-top: 25px;
    padding-bottom: 25px;
    margin: 0;
}

